--- a/playbooks/install_postgres.yaml
+++ b/playbooks/install_postgres.yaml
@@ -1,15 +1,21 @@
-- name: Ensure bash, OpenSSl, and libssl are the latest versions
-  apt: name={{ item }} update_cache=true state=latest
-  with_items:
-    - bash
-    - openssl
-    - libssl-dev
-    - libssl-doc
-  tags: packages
+---
+-  hosts: all
+   become: true
+   vars_files:
+    - env_variables
+   tasks: 
+   - name: Ensure bash, OpenSSl, and libssl are the latest versions
+     apt: name={{ item }} update_cache=true state=latest
+     with_items:
+       - bash
+       - openssl
+       - libssl-dev
+       - libssl-doc
+     tags: packages
 
-- name: Installing required postgresql packages
-      apt:
-       name: "{{ item }}"
-       state: present
-      with_items: "{{ postgres_packages }}"
+   - name: Installing required postgresql packages
+     apt:
+      name: "{{ item }}"
+      state: present
+     with_items: "{{ postgres_packages }}"
 
